# dragonfly-mcp-server

./: # 🔍 MÉTHODOLOGIE AUDIT TOOLS.txt  .env.example  .env.legifrance.example  .gitignore  CHANGELOG.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE_WORKERS_REALTIME.txt  DISPLAYNAMES_FINAL.md  EMAIL_SEND_FINAL_AUDIT.md  ENV_VARIABLES.md  HTTP_CLIENT_SUMMARY.md  INDEX  LLM_DEV_GUIDE.md  LLM_GUIDE.md  MINECRAFT_CONTROL_DEVELOPMENT.md  README.md  README_WORKERS.md  RELEASE_NOTES_v1.9.0.md  RELEASE_v1.3.0.md  RELEASE_v1.5.0.md  RESUME_SESSION.md  TESTS_WORKERS_REALTIME.md  UPDATE_DISPLAYNAMES.md  VELIB_TOOL_SUMMARY.md  commit_and_push.py  commit_and_push.sh  do_git_commit.py  git_commit.sh  git_commit_curl.sh  py_orch.py  pyproject.toml  requirements.txt  update_categories.py
.dgy_backup/files/: 1c97c1b6  291ca3d6  32c066b  36012c91  3c13e023  50bd0aee  5a09d782  5dc3af38  681b24a2  6c47e9c8  7df52752  e61e633
.github/workflows/: devnav_index.yml
assets/: dragonfly-logo.md
changelog/: CHANGELOG_2025-10-20.md  CHANGELOG_2025-10-20T17-14-00.md  CHANGELOG_2025-10-20T17-52-00.md
changelogs/: CHANGELOG_1.0.0_to_1.13.x.md  CHANGELOG_1.14.3_to_1.18.2.md  CHANGELOG_1.19.0_to_1.21.1.md  CHANGELOG_1.22.0_to_1.22.2.md  CHANGELOG_1.23.0_audit_campaign.md  CHANGELOG_1.24.0_to_1.27.5.md  CHANGELOG_1.29.0_to_1.51.0.md  CHANGELOG_1.55.1_to_1.6.4.md
docs/: file_editor_crash_test.md
reports/: ai_curation_2025-10-20.md
rlm/legifrance/: PROMPTS_DATABASE_SCHEMA.sql  PROMPTS_INIT_GUIDE_V2.md  PROMPT_MASTER_01_ORCHESTRATEUR_V2.md  PROMPT_MASTER_02_AGENTS_V2.md  PROMPT_MASTER_03_GUIDE_USAGE_V2.md  _MEMBANK_INDEX.md  old_PROMPT_MASTER_03_GUIDE_USAGE.md
scripts/: README.md  bootstrap_speech_assets.py  create_release_v1.9.0.sh  dev.ps1  dev.sh  download_piper_fr_voices.py  generate_tools_catalog.py  py_worker_to_mermaid.py
scripts_ssh/: README.md  health_check.sh  service_check.sh
src/: README.md  __init__.py  app_factory.py  config.py  de421.bsp.REMOVED.git-id  server.py  ui_html.py  ui_js.py
src/add_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/app_core/: tool_discovery.py
src/app_server/: app_factory_compact.py  static_mount.py  tools_routes.py
src/dragonfly_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/routes/: workers.py
src/templates/: workers_page.py
src/tool_specs/: academic_research_super.json  astronomy.json  aviation_weather.json  call_llm.json  call_llm_agent.json  chat_agent.json  chess_com.json  coingecko.json  date.json  dev_navigator.json  device_location.json  discord_bot.json  discord_webhook.json  git.json  (+54 more)
ssh_keys/: README.md
tests/: orchestrator_phase2a_test.py  orchestrator_phase2c_test.py  orchestrator_retry_loop_test.py
tmp_devnav_fixtures/: routes.yaml
workers/: README.md  ai_curation_production.process.json  ai_curation_sonar.process.json  ai_curation_sonar_logged.process.json  ai_curation_sonar_logged_v5.5.2.process.json  ai_curation_sonar_logged_v5.5.2_mermaid_update.txt  ai_curation_top10.process.json  ai_curation_top10_v2.process.json  ai_curation_top10_v3.process.json  example_email_triage.process.json  production_briefing.process.json  smart_briefing_final.process.json  smart_daily_briefing.process.json  smart_daily_briefing_v2.process.json  test_advanced.process.json  test_date.process.json  test_mcp_tool.process.json  test_minimal.process.json  test_retry_loop.process.json  test_smart_insight.process.json
(+1042 files in other folders)
