[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonfly-mcp-server"
version = "1.51.2"
description = "Dragonfly MCP server tools (orchestrator, handlers, utilities)"
readme = "README.md"
authors = [{ name = "orchestrator-team" }]
requires-python = ">=3.10"
keywords = ["mcp", "orchestrator", "workflows", "automation", "ai"]
license = { text = "MIT" }

# Runtime deps
dependencies = [
  "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
