[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonfly-mcp-server"
version = "1.54.1"
description = "Dragonfly MCP server tools (orchestrator, handlers, utilities)"
readme = "README.md"
authors = [{ name = "orchestrator-team" }]
requires-python = ">=3.10"
keywords = ["mcp", "orchestrator", "workflows", "automation", "ai"]
license = { text = "MIT" }

# Runtime deps
dependencies = [
  "requests>=2.31.0",
  "mcipc>=2.4.0",
  "trimesh[easy]>=4.0.0",
  "numpy>=1.24.0",
  "openpyxl>=3.1.2",
  "pillow>=10.0.0",
  "playwright>=1.47.0",
  "pypdf>=4.0.0",
  "sympy>=1.12",
  "av>=11.0.0",
  "python-chess>=1.999",
]

[project.optional-dependencies]
# Extras pour le dev local (optionnels)
dev = [
  "pytest>=7.0",
  "black>=24.0.0",
  "isort>=5.12.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
