[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonfly-mcp-server"
version = "1.55.6"
description = "Dragonfly MCP server tools (orchestrator, handlers, utilities)"
readme = "README.md"
authors = [{ name = "orchestrator-team" }]
requires-python = ">=3.10"
keywords = ["mcp", "orchestrator", "workflows", "automation", "ai"]
license = { text = "MIT" }

# Runtime deps
dependencies = [
  "requests>=2.31.0",
  "httpx>=0.28.0",
  "jsonschema>=4.25.0",
  "mcipc>=2.4.0",
  "trimesh[easy]>=4.0.0",
  "numpy>=1.24.0",
  "pandas>=2.3.0",
  "openpyxl>=3.1.2",
  "pillow>=10.0.0",
  "playwright>=1.47.0",
  "pypdf>=4.0.0",
  "sympy>=1.12",
  "av>=11.0.0",
  "python-chess>=1.999",
  "paramiko>=4.0.0",
  "psutil>=5.9.0",
  "pydantic>=2.12.0",
  "docx2pdf>=0.1.8",
  "yt_dlp",
  "beautifulsoup4",
  "websocket-client",
  "fastapi",
  "uvicorn",
  "skyfield",
  "simpleobsws>=1.3.0,<2.0.0",
  "google-genai>=0.5.0",
  "pyjson5>=1.6.0",
  "json5>=0.9.0"
]

[project.optional-dependencies]
# Extras pour le dev local (optionnels)
dev = [
  "pytest>=7.0",
  "black>=24.0.0",
  "isort>=5.12.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
